--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,13 +1,13 @@
 {% set name = "PyMySQL" %}
-{% set version = "1.1.0" %}
-{% set sha256 = "4f13a7df8bf36a51e81dd9f3605fede45a4878fe02f9236349fd82a3f0612f96" %}
+{% set version = "1.1.1" %}
+{% set sha256 = "123ad082f57620e05de5f1e37f065bb5efacf8fcb801aebc71d7279fc0e12357" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  url: https://github.com/PyMySQL/{{ name }}/archive/refs/tags/v{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
@@ -19,6 +19,7 @@ requirements:
   host:
     - python >=3.7
     - pip
+    - setuptools
   run:
     - python >=3.7
 
@@ -43,3 +44,4 @@ extra:
   recipe-maintainers:
     - djsutherland
     - synapticarbors
+    - thewchan
